# ShellForgeAI

./: .env.example  AGENTS.md  CHANGELOG.md  HOMELAB.md  OPS.md  README.md  SHELLFORGE.md  compose.yaml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
docs/: APPROVED_CHANGE_CONSTRUCTION_POLICY.md  APPROVED_CHANGE_CONTRACT.md  ARCHIVE_SOURCE_ACTION_RUNBOOK.md  CLI_REFACTOR_MAP.md  COMMAND_SURFACE_AUDIT.md  LEGACY_PROPOSAL_COMPATIBILITY.md  PACKAGING_STRATEGY.md  PRODUCT_STATUS.md  V1_COMMAND_SURFACE.md  V1_RELEASE_CANDIDATE.md  V1_RELEASE_NOTES.md  V1_VALIDATION.md  V2_COMMAND_CONTRACT.md  VALIDATION_LANES.md  VALIDATION_MATRIX.md  WINDOWS_POWERSHELL_V1.md  architecture.md  audit-and-cleanup.md  cli.md  codex-integration.md  compose-ops.md  container-smoke-test.md  data-layout.md  demo.md  interactive-mode.md  mission-workflow.md  model-providers.md  north-star.md  profiles.md  release-baseline.md  roadmap.md  safety.md  tools.md  v1-scope.md
examples/: SHELLFORGE.md  config.yaml  profile-prod-readonly.yaml  tool-custom-example.yaml
scripts/: check_validation_env.py  cli_import_audit.py  cli_refactor_inventory.py  cli_surface_snapshot.py  docker01_artifact_archive_plan.py  docker01_build_health_report.py  docker01_build_path_candidate_verify.py  docker01_build_path_diagnostic_report.py  docker01_build_path_ownership_handoff_packet.py  docker01_build_path_ownership_proposal.py  docker01_build_path_patch_preview.py  docker01_build_path_patch_rehearsal.py  docker01_external_dockerfile_ownership_update.py  docker01_external_dockerfile_ownership_update_validate.py  docker01_hygiene_report.py  docker01_merge_readiness.py  docker01_operator_qa_bundle.py  docker01_ownership_fix_readiness.py  docker01_v2_readiness.py  (+24 more)
(+498 files in other folders)
