[build-system]
requires=["hatchling"]
build-backend="hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shellforgeai"]

[tool.hatch.build.targets.sdist]
include = [
  "src/shellforgeai",
  "config/default.yaml",
  "pyproject.toml",
  "README.md",
]

[project]
name="shellforgeai"
version="1.0.0"
requires-python=">=3.12"
dependencies=["typer>=0.12","rich>=13","pydantic>=2","pydantic-settings>=2","pyyaml>=6","httpx>=0.27","psutil>=5.9"]
[project.optional-dependencies]
dev=["pytest>=8","pytest-xdist>=3.6","ruff>=0.5","mypy>=1.10","types-PyYAML"]
[project.scripts]
shellforgeai="shellforgeai.cli:app"
sfai="shellforgeai.cli:app"
[tool.ruff]
line-length=100
target-version="py312"
[tool.ruff.lint]
select=["E","F","I","UP","B","SIM"]
ignore=["UP017"]
[tool.mypy]
python_version="3.12"
packages=["shellforgeai"]
ignore_missing_imports=true
disallow_untyped_defs=false
check_untyped_defs=false
disallow_any_generics=false
warn_return_any=false
disable_error_code=["import-untyped","no-untyped-def","type-arg","no-any-return","assignment","comparison-overlap","no-untyped-call","untyped-decorator","attr-defined","arg-type","misc"]
[[tool.mypy.overrides]]
module=["tests.*"]
disallow_untyped_defs=false
[tool.pytest.ini_options]
testpaths=["tests"]
pythonpath=["src"]
addopts="-q"
markers=[
  "slow: slow tests that are expected to take noticeable time",
  "integration: integration-style tests",
  "safety: tests covering safety boundaries and mutation refusal",
  "docker: tests requiring Docker or Docker-shaped fixtures",
  "artifact: artifact lifecycle tests",
  "interactive: interactive transcript tests",
]
